--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node ./bin/www"
   },
   "engines": {
-    "node": "8.x.x"
+    "node": ">=4.3.2"
   },
   "devDependencies": {
     "@google-cloud/nodejs-repo-tools": "^2.3.0",
